# lv_port_stm32f769_disco

./: .cproject  .cproject_org  .gitignore  .project  .project_org  CMakeLists.txt  LinkerScript.ld  README.md  STM32F769I-DISCO.xml  lv_conf.h  lv_demo_conf.h  lv_ex_conf.h  lv_port_stm32f769_disco Debug.launch  stm32f769_disco_no_os_sw4stm32 Run.cfg  stm32f769_discovery_no_os Debug.launch
.github/workflows/: stm32_port.yml
HAL_Driver/Inc/: stm32f7xx_hal_conf.h
Utilities/Log/: lcd_log_conf.h
Utilities/STM32F769I-Discovery/: stm32f769i_discovery_lcd.c  stm32f769i_discovery_lcd.h  stm32f769i_discovery_ts.c
hal_stm_lvgl/tft/: tft.c  tft.h
hal_stm_lvgl/touchpad/: touchpad.c
ide/cmake/: arm-none-eabi.cmake
inc/: stm32f7xx_it.h
src/: main.c  stm32f7xx_it.c  system_stm32f7xx.c
startup/: startup_stm32f769xx.s
